--- a/디-비/디비딥비디비 정리.md
+++ b/디-비/디비딥비디비 정리.md
@@ -1,22 +1,62 @@
 ### 디비디비딥 정리
 
-#### 일단 내가 아는 명령어
+----
 
-DESC (테이블) : 테이블의 각 컬럼과 각 속성들을 보여줌
+> cmd mysql 접속
+>
+> mysql -u root -p
+>
+> : password
 
-USE (디비 이름) : 사용할 디비 교체
 
-Select (필요한 컬럼 or *(All)) (from (테이블)) (where (조건) ) : 컬럼 조회
 
-show  (tables / databases)
+DESC (테이블 명) : 테이블의 각 컬럼과 각 속성들을 보여줌
+
+USE (디비 명) : 사용할 디비 교체
+
+Select (필요한 컬럼 or *(All)) (from (테이블 명)) (where (조건) ) ; 컬럼 조회
+
+show  (tables / databases);
 
 create (table / database) (이름) (
 
-​	ex) uuid int auto_increment primary key,
+​	[컬럼이름] [자료형] [테이블 속성]
 
 );
 
-insert into (테이블) values(순서대로 값)
+drop (table/database) (이름);
+
+insert into (테이블 명) (value / values) (순서대로 값);
+
+update (테이블 명) set (컬럼) = '값' where (조건);
+
+delete from (테이블 명) where 조건; 
+
+
+
+#### 테이블 속성
+
+> 테이블 속성에는 필드명과 필드에 대한 자료형과 속성을 나타냄
+
+##### 자료형
+
+```
+varchar()	//문자열
+int 	//정수
+double	//실수
+enum('값', '값')	//지정된 값이 없다면 입력하지 않는다.
+timestamp, time //시간
+```
+
+##### 속성
+
+```
+not null //빈 공간을 허용하지 않는다.
+auto_increment	//숫자를 자동적으로 증가하게 함
+primary key	//중복을 허용하지 않는다.
+```
+
+
 
 #### 키(key)
 
