--- a/디-비/디비딥비디비 정리.md
+++ b/디-비/디비딥비디비 정리.md
@@ -46,6 +46,7 @@ int 	//정수
 double	//실수
 enum('값', '값')	//지정된 값이 없다면 입력하지 않는다.
 timestamp, time //시간
+				//Datetime timestamp default now()
 ```
 
 ##### 속성
