--- a/디-비/디비딥비디비 정리.md
+++ b/디-비/디비딥비디비 정리.md
@@ -1,4 +1,4 @@
-### 디비디비딥 정리
+### SQL 정리
 
 ----
 
@@ -32,7 +32,7 @@ update (테이블 명) set (컬럼) = '값' where (조건);
 
 delete from (테이블 명) where 조건; 
 
-
+alter table (테이블 명) auto_increment=(시작할 값)
 
 #### 테이블 속성
 
