Update 프로젝트 폴더 구조.md

--- a/Spring boot/프로젝트 폴더 구조.md
+++ b/Spring boot/프로젝트 폴더 구조.md
@@ -29,8 +29,7 @@
        
 
 2. **src/main/resources**
-   클래스에서 사용하는 리소스를 보관하는 곳.
-   
+   클래스에서 사용하는 리소스를 보관하는 곳
 + **/templates**
      직접적인 화면과 관련된 파일을 관리하는 곳
    + **/static**
