--- a/프로그래밍/객체지향.md
+++ b/프로그래밍/객체지향.md
@@ -184,7 +184,7 @@ OOP에서 상속을 통해 코드의 중복 문제를 해결할 수 있음
 - **추상화**
   - 목적과 관련이 없는 부분을 제외해서 필요한 부분을 포착하는 기법
 
-  - 객체의 공통된 속성들 중 필요한 부분을 포착해서 클래스로 정의하는 설계 기법
+  - 객체의 공통된 속성들 중 필요한 부분을 포장해서 클래스로 정의하는 설계 기법
 - **캡슐화**
   - 외부에 노출할 필요가 없는 정보들은 은닉 (정보은닉)
 - **상속**
