--- a/프로그래밍/함수형.md
+++ b/프로그래밍/함수형.md
@@ -1,4 +1,10 @@
 ## 함수형 프로그래밍
 
->
+### 함수형 프로그래밍의 특징
 
+ 
+
+### Reference
+
+* https://velog.io/@kyusung/%ED%95%A8%EC%88%98%ED%98%95-%ED%94%84%EB%A1%9C%EA%B7%B8%EB%9E%98%EB%B0%8D-%EC%9A%94%EC%95%BD
+* 코틀린으로 배우는 프로그래밍 (조재용, 우명인)
