--- a/프로그래밍/kotlin/아니 그래서 코틀린이 뭔데.md
+++ b/프로그래밍/kotlin/아니 그래서 코틀린이 뭔데.md
@@ -6,10 +6,20 @@
 
 * Jvm위에서 실행되는 언어
 * JetBrain에서 만든 언어
-* 자바와 100% 호환성을 가짐
+  * JetBrains의 R&D 센터가 위치한 근처의 코틀린 섬에서 이름 따왔음
+* 안드로이드 공식 언어
+  * 그외에도 스프링, 톰캣, javascript, javaEE, iOS 모두 쌉가능이다.
+* 자바와 100% 호환성을 가짐 (그리고 간결하다)
   * 자바 라이브러리 모두 사용 가능
+  * 자바보다 확연히 간결한 문법 제공, 런타임 오버헤드가 거의 없음
 * OOP(Object Oriented Programming)와 FP(Functional Programming) 모두 쌉가능한 멀티 패러다임 랭귀지
 * 모든것은 객체다 함수 자체도 객체가 됨
-* 타입 추론 지원
-* 세미콜론 X!!!💕
-  *이거지*
+* 오버헤드 없는 널 안정성 제공, 정말 편리함
+  * 변수 생성시 타입에 ?을 붙혀 Nullable로 만듬
+* 모든 함수가 리턴값을 가짐(void = unit)
+* 모든 원시 타입은 wrapper class가 존재하지 않음 따로 객체 취급을 받음
+* static이 없으며 companion object를 사용해 감싸야 함
+* 기본 클래스는 디폴트가 final class임 
+  * 상속을 위해선 open을 붙혀야 함
+* 세미콜론 없어도 됨 *이게 ㄹㅇ이지 ㄹㅇㅋㅋ*
+  * 넣어도 상관은 없음
