[ADD] - Variable & Function

--- a/프로그래밍/kotlin/아니 그래서 코틀린이 뭔데.md
+++ b/프로그래밍/kotlin/아니 그래서 코틀린이 뭔데.md
@@ -26,3 +26,31 @@
 
 #### 코틀린에서의 변수 선언
 
+* var
+  * 값의 재할당이 가능함
+* val 
+  * 값의 재할다이 불가능함
+  * 자바의 final과 같음
+
+*FP스럽게 코드를 작성하고 싶거나 부수효과를 피하고 싶다면 val을 사용하는 습관을 들이는 것이 좋음*
+유지보수나 가독성 측면에서 좋음
+
+#### 함수
+
+```
+fun function(x: int, y: int): Int {
+	return x + y
+}
+```
+
+* 함수의 반환타입을 생략할 수 없음
+  *생략가능한 경우는 반환타입 Unit일 경우만 가능*
+
+* 타 언어의 Void과 같은 의미지만 Void는 실제로 아무것도 없는 것을 
+  의미하지만 Unit은 Singleton 객체임
+
+* 바디가 한줄일 경우 {} 대신에 = 으로 대신 할 수 있음
+
+### Reference
+
+* https://gold.gitbook.io/kotlin/
