--- a/프로그래밍/kotlin/아니 그래서 코틀린이 뭔데.md
+++ b/프로그래밍/kotlin/아니 그래서 코틀린이 뭔데.md
@@ -35,21 +35,58 @@
 *FP스럽게 코드를 작성하고 싶거나 부수효과를 피하고 싶다면 val을 사용하는 습관을 들이는 것이 좋음*
 유지보수나 가독성 측면에서 좋음
 
+코틀린의 자료형은 기본적으로 래퍼런스 자료형임
+
 #### 함수
 
-```
+```kotlin
+fun 함수명(변수명:타입, 변수명:타입): 반환형 {
+	내용..
+	return 반환값
+}
+
 fun function(x: int, y: int): Int {
 	return x + y
 }
+
+fun sum(x: Int, y: Int): Int = x + y
 ```
 
 * 함수의 반환타입을 생략할 수 없음
   *생략가능한 경우는 반환타입 Unit일 경우만 가능*
-
 * 타 언어의 Void과 같은 의미지만 Void는 실제로 아무것도 없는 것을 
   의미하지만 Unit은 Singleton 객체임
-
 * 바디가 한줄일 경우 {} 대신에 = 으로 대신 할 수 있음
+
+#### 가변인자
+
+```kotlin
+fun printNum(vararg numbers.Int) {
+    for (e in numbers) {
+        println(e)
+    }
+}
+```
+
+**vararg** 키워드로 가변인자를 사용할 수 있음
+
+
+
+#### 내부 함수
+
+```kotlin
+fun function1(num1:Int):Int {
+    fun function2(num2:Int):Int {
+        fun function3(num3:Int):Int {
+            return num3 + 1
+        }
+        return function3(num2) + 1
+    }
+    return function2(num1) + 1
+}
+```
+
+함수 내부에 또 함술르 정의할 수 있음 함수의 호출 범위는 내부로 제한됨
 
 ### Reference
 
