--- a/프로그래밍/kotlin/람다.md
+++ b/프로그래밍/kotlin/람다.md
@@ -21,10 +21,52 @@
 (Int, Int) -> Int		// 정수 2개를 받아 정수를 리턴하는 타입의 함수
 ```
 
-**규칙**
+##### 규칙
 
 * 람다 함수는 항상 중괄호로 감싸서 표현해야 함
 * { }안에 -> 표시가 있으며, 매개변수 -> 함수 내용
 * 매개 변수 타입을 선언해야 하며, 추론이 가능할 땐 생략 가능함
 * 반환값은 내용의 마지막 표현식임
 
+
+
+```kotlin
+val sum = { x1: Int, x2: Int -> x1+x2 }
+
+fun main(args: Array<String>) {
+    val result: Int = sum(10, 20)
+}
+```
+
+람다 함수는 fun 예약어 혹은 함수명도 명시하지 않으며 함수의 모든 내용이 { }에 포함됨
+
+
+
+```kotlin
+({ println("") })
+{ println("") }()
+run { println("") }
+println("").run {}
+```
+
+위는 모두 같은 표현이며, 람다함수를 정의한 후 run() 함수에 대입하면 바로 호출되어 실행될 수 있음
+
+
+
+```kotlin
+fun invokeFunction(f: (Int, Int)->Int) {// 정수 두개를 받아 정수를 리턴하는 함수를 인자로 받음
+    val returnValue = f(10, 20)			// 인자로 받은 함수의 리턴값을 받은 후		
+    println(returnValue)				// 프린트
+}
+
+fun sum(a:Int, b:Int):Int {
+    return a+b
+}
+
+
+fun main(args: Array<String>) {
+    invokeFunction(::sum)				// ::을 이용해 sum 함수를 넘김
+}
+```
+
+고차 함수와 람다를 사용한 예, 
