[MODIFY] - 내용 수정

--- a/프로그래밍/kotlin/리플렉션.md
+++ b/프로그래밍/kotlin/리플렉션.md
@@ -35,11 +35,11 @@ someInstance::class
 
 #### 함수 참조
 
-* SomeClass::**class**
+* `SomeClass::**class**`
   * 클래스 참조
-* SomeClass::**Method**
+* `SomeClass::**Method**`
   * 클래스 내 메소드 참조
-* ::Func
+* `::Func`
   * 함수 참조
 
 
