--- a/프로그래밍/kotlin/제네릭.md
+++ b/프로그래밍/kotlin/제네릭.md
@@ -32,8 +32,8 @@ fun main(args: Array<String>) {
 }
 ```
 
-Comparable을 구현한 형식 인자만 비교 연산자를 사용 할 수 있기 때문에 
-**T**의 선언에 **Comparable<T>**를 표시함
+`Comparable`을 구현한 형식 인자만 비교 연산자를 사용 할 수 있기 때문에 
+**T**의 선언에 `Comparable<T>`를 표시함
 
 
 
@@ -46,7 +46,7 @@ fun <T> ensureTrailingPeriod(seq: T)
         }
 ```
 
-인자에 두 개의 제약을 걸어야 하는 경우 **where 연산자**를 사용함
+인자에 두 개의 제약을 걸어야 하는 경우 `where` **연산자**를 사용함
 
 
 
