--- a/프로그래밍/패러다임/객체지향.md
+++ b/프로그래밍/패러다임/객체지향.md
@@ -1,6 +1,25 @@
 ## 객체지향 프로그래밍(OOP)
 
-> 자지 금부터 객체지향 프로그래밍에 대해 알아보자👍
+### 요약 정리
+
+- OOP
+  - 객체들이 서로 유기적으로 동작하는 프로그래밍 이론
+  - 코드의 재사용성과 중복제거가 가장 큰 목적
+- **추상화**
+  - 목적과 관련이 없는 부분을 제외해서 필요한 부분을 포착하는 기법
+
+  - 객체의 공통된 속성들 중 필요한 부분을 포장해서 클래스로 정의하는 설계 기법
+- **캡슐화**
+  - 외부에 노출할 필요가 없는 정보들은 은닉 (정보은닉)
+- **상속**
+  - 상속 관계에 있는 두 클래스에 대해, 부모 클래스가 자손 클래스에게 속성을 물려주는 것
+
+  - 코드의 재사용이 목적
+- **다형성**
+  - 같은 형태이지만 다른 기능을 하는 것
+  - 오버라이딩은 이와 관련된 기능임
+
+---
 
 ### OOP의 기본 구성 요소
 
@@ -10,7 +29,8 @@
 컴퓨터 프로그램을 명령어의 목록으로 보는 시각에서 벗어나
 여러 개의 독립된 단위, 즉 **객체들의 모임**으로 파악하고자 하는 것,
 객체의 관점에서 프로그래밍하는 것을 의미함
-** 사람이 말로 표현 가능한 모든 것을 객체라 할수 있음*
+
+*사람이 말로 표현 가능한 모든 것을 객체라 할수 있음*
 
 **장점**
 
@@ -85,7 +105,7 @@ fun wrappingFruit(fruit: String): unit{
 }
 ```
 
-* *wrappingFruit의 인자로 apple, kiwi등의 추상화 개념인 fruit을 사용함*
+* `wrappingFruit`의 인자로 `apple`, `kiwi`등의 추상화 개념인 fruit을 사용함
 * *이 코드는 어떤 과일을 넣어도 변경할 필요가 없음*
 * *뒤에서 다룰 "다형성"의 원리에 따라 각 클래스에서 오버라이드 된 메서드를 호출함*
 
@@ -173,25 +193,3 @@ class OverloadTest {
 코드의 중복이 많아지면 개발단계에서도  피곤하지만 유지보수에서도 많은 비용이 들게 됨`코드의 이원화 문제`
 
 OOP에서 상속을 통해 코드의 중복 문제를 해결할 수 있음
-
----
-
-### 정리
-
-- OOP
-  - 객체들이 서로 유기적으로 동작하는 프로그래밍 이론
-  - 코드의 재사용성과 중복제거가 가장 큰 목적
-- **추상화**
-  - 목적과 관련이 없는 부분을 제외해서 필요한 부분을 포착하는 기법
-
-  - 객체의 공통된 속성들 중 필요한 부분을 포장해서 클래스로 정의하는 설계 기법
-- **캡슐화**
-  - 외부에 노출할 필요가 없는 정보들은 은닉 (정보은닉)
-- **상속**
-  - 상속 관계에 있는 두 클래스에 대해, 부모 클래스가 자손 클래스에게 속성을 물려주는 것
-
-  - 코드의 재사용이 목적
-- **다형성**
-  - 같은 형태이지만 다른 기능을 하는 것
-
-  - 오버라이딩은 이와 관련된 기능임
