--- a/프로그래밍/kotlin/아니 그래서 코틀린이 뭔데.md
+++ b/프로그래밍/kotlin/아니 그래서 코틀린이 뭔데.md
@@ -32,7 +32,7 @@
   * 값의 재할다이 불가능함
   * 자바의 final과 같음
 
-*FP스럽게 코드를 작성하고 싶거나 부수효과를 피하고 싶다면 val을 사용하는 습관을 들이는 것이 좋음*
+*FP스럽게 코드를 작성하고 싶거나 부수효과를 피하고 싶다면 `val`을 사용하는 습관을 들이는 것이 좋음*
 유지보수나 가독성 측면에서 좋음
 
 코틀린의 자료형은 기본적으로 래퍼런스 자료형임
@@ -68,7 +68,7 @@ fun printNum(vararg numbers.Int) {
 }
 ```
 
-**vararg** 키워드로 가변인자를 사용할 수 있음
+`vararg` 키워드로 가변인자를 사용할 수 있음
 
 
 
