--- a/프로그래밍/kotlin/람다.md
+++ b/프로그래밍/kotlin/람다.md
@@ -9,6 +9,9 @@
 
 이름만 고차함수이고 사용법은 일반 함수와 똑같음, 다만 인자를 정의하는 부분만 람다 표현식을 사용함 
 
+* 함수에 함수를 파라미터로 전달할 수 있음
+* 함수의 반환값으로 함수를 사용할 수 있음
+
 #### 람다 표현식
 
 익명 함수를 지칭하는 용어로 코드의 간결함을 주목적으로 사용함
